# wiringX

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CNAME  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  bananapi.c  ci20.c  cmake_install.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in  gen.package.sh  hummingboard.c  index.html  libwiringx-0-.deb  params.json  radxa.c  raspberrypi.c  wiringX.c  wiringX.h
debian/: changelog  control  copyright  libwiringx-dev.install  libwiringx.install  rules
docs/source/: conf.py  index.rst
docs/source/.static/: custom.css
examples/: Makefile  analog.c  blink  blink.c  i2c_spi.c  interrupt.c  pwm.c  read  read.c  serial.c
python/: CMakeLists.txt  PKG-INFO  README.txt  setup.py
python/examples/: 7seg.py  blink.py  interrupt.py  read.py  tmp102.py
python/res/deb/: prerm
python/wiringX/: __init__.py  wiringx.c
res/deb/: prerm
src/: bananapi.c  bananapi.h  chip.c  chip.h  ci20.c  ci20.h  hummingboard.c  hummingboard.h  i2c-dev.c  i2c-dev.h  odroid.c  odroid.h  radxa.c  radxa.h  raspberrypi.c  raspberrypi.h  wiringX.c  wiringX.h  wiringx.c  wiringx.h
src/platform/: platform.c  platform.h
src/platform/hardkernel/: odroidc1.c  odroidc2.c  odroidxu4.c
src/platform/lemaker/: bananapi.c  bananapi1.c  bananapim2.c  bananapim2.h  bananapro.c  bananapro.h
src/platform/linksprite/: pcduino1.c  pcduino1.h
src/platform/milkv/: duo.c  duo.h
src/platform/pine64/: pinea64.c  pinea64.h
src/platform/radxa/: common.c  common.h  rock4.c  rock4.h  rock5b.c  rock5b.h
src/platform/raspberrypi/: raspberrypi1b+.c  raspberrypi1b1.c  raspberrypi1b2.c  raspberrypi2.c  raspberrypi3.c  raspberrypi4.c  raspberrypi4.h  raspberrypizero.c  raspberrypizero.h
src/platform/solidrun/: hummingboard_base_pro_dq.c  hummingboard_base_pro_sdl.c  hummingboard_edge.c  hummingboard_edge.h  hummingboard_gate_edge_dq.c  hummingboard_gate_edge_sdl.c  hummingboard_sdl.c  hummingboard_sdl.h
src/platform/xunlong/: orangepipc+.c  orangepipc2.c  orangepipc2.h
src/soc/: soc.c  soc.h
src/soc/allwinner/: a10.c  a10.h  a20.c  a20.h  a31s.c  a31s.h  a64.c  a64.h  h3.c  h5.c  h5.h
src/soc/amlogic/: s805.c  s805.h  s905.c  s905.h
src/soc/broadcom/: 2711.c  2711.h  2835.c  2835.h  2836.c  2836.h
src/soc/nxp/: imx6dqrm.c  imx6dqrm.h  imx6sdlrm.c  imx6sdlrm.h
src/soc/rockchip/: common.c  common.h  rk3399.c  rk3399.h  rk3588.c  rk3588.h
src/soc/samsung/: exynos5422.c  exynos5422.h
src/soc/sophgo/: cv180x.c  cv180x.h
stylesheets/: styles.css
